--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "lens",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "devDependencies": {
     "react-scripts": "0.6.0"
   },
   "dependencies": {
+    "materialize-css": "^0.97.7",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
